--- a/gb/19/12/1/n11692823.md
+++ b/gb/19/12/1/n11692823.md
@@ -1,56 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/ijwoue2416/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/ijwoue2416/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/ijwoue2416/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¸ÛÈË¼âÉ³¾×ÓÎÐÐ ¾¯Åçºú½·ÅçÎíÉä´ßÀáµ¯</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/12/1912010358172188-600x400.jpg" />
-<h6>2019Äê12ÔÂ1ÈÕ£¬¸ÛÈËÔÚ¼âÉ³¾×¾ÙÐÐÓÎÐÐ£¬·À±©¾¯²ì¾ÙÆðÀ¶Æì£¬²¢ÅçÉäºú½·ÅçÎí¡££¨ËÎ±ÌÁú£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zumrun270/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/zumrun270/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/zumrun270/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/zumrun270/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/zumrun270/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æ¸¯äººå°–æ²™å’€æ¸¸è¡Œ è­¦å–·èƒ¡æ¤’å–·é›¾å°„å‚¬æ³ªå¼¹</h2>
+<a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/djtsp.jpg"title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/zumrun270/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3>
+<h6>2019å¹´12æœˆ1æ—¥ï¼Œæ¸¯äººå‘èµ·æ¸¸è¡Œé›†ä¼šï¼Œé˜²æš´è­¦å¯Ÿå‘å°„å‚¬æ³ªå¼¹ã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ01ÈÕÑ¶¡¿12ÔÂ1ÈÕÏÂÎç£¬´óÅú¸ÛÈËÔÚ¾ÅÁúÇø<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E5%B0%96%E6%B2%99%E5%92%80.md">¼âÉ³¾×</a>¾ÙÐÐ¡°<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%AF%8B%E5%BF%98%E5%88%9D%E5%BF%83.md">ÎãÍü³õÐÄ</a>´ó<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md">ÓÎÐÐ</a>¡±£¬²»ÉÙ²ÎÓëÕß×ß³öÂíÂ·£¬Ôâµ½¾¯·½ÅçÉäºú½·ÅçÎí¡£Ëæºó£¬¾¯·½»¹Á¬·¢Á½Ã¶´ßÀáµ¯¡£</p>
-<p>ÏÂÎç3Ê±°ë×óÓÒ£¬¾Û¼¯ÔÚ<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E5%B0%96%E6%B2%99%E5%92%80.md">¼âÉ³¾×</a>ÖÓÂ¥µÄ´óÅúÊÐÃñ¿ªÊ¼<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md">ÓÎÐÐ</a>£¬´ÓÖÓÂ¥¶ÔÃæ¿ÕµØÆð²½£¬ÑØÊáÊ¿°ÍÀûµÀ£¬¾­¼âÉ³¾×º£±õ»¨Ô°ÓÎÐÐÖÁºì´|ÌåÓý¹Ý¡£ÑØÍ¾ÓÐ·À±©¾¯½ä±¸¡£ÓÉÓÚÓÎÐÐÈËÊýÖÚ¶à£¬¶ÓÎéÊ®·Ö¼·±Æ£¬²»ÉÙÃñÖÚ×ß³öÂíÂ·£¬<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E9%98%B2%E6%9A%B4%E8%AD%A6%E5%AF%9F.md">·À±©¾¯²ì</a>Ò»¶ÈÏòºó³·ÍË¡£</p>
-<p>ÓÎÐÐ¶ÓÎéÖÁÃÖ¶ØµÀ£¬ÔÚ¸ÃµØ°ëµº¾ÆµêÍâ£¬<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E9%98%B2%E6%9A%B4%E8%AD%A6%E5%AF%9F.md">·À±©¾¯²ì</a>²»Ê±¾ÙÀ¶Æì£¬»¹·¢Éäºú½·ÅçÎí£¬ÅçÏòÀë¿ªÂíÂ·µÄÓÎÐÐÊÐÃñ£¬ÒªÇóÓÎÐÐÊÐÃñ·µ»ØÐÐÈËÂ·¡£Ô½À´Ô½¶àµÄÊÐÃñÔÚÂ·¿ÚÎ»ÖÃÍ£ÁôÓë¾¯·½¶ÔÖÅ¡£</p>
-<p>Ô¼ÓÎÐÐ40·ÖÖÓ£¬¼â¶«Ïû·À¾Ö¶ÔÃæÂíÂ·ÉÏ£¬ÒÑ¾­ÓÐ´óÅúÊÐÃñ¾Û¼¯£¬·À±©¾¯Í»È»¾ÙÆì£¬ÓÖÎÞ¹Ê·¢ÉäÁ½Ã¶´ßÀáµ¯ÇýÉ¢ÃñÖÚ£¬ÃñÖÚ·×·×±Ü¿ª¡£¶ø´Ë´¦Î»ÖÃ·Ç³£ÏÁÕ­£¬ÓÖ¼ÓÉÏ´Óºì¹ÝÖÕµã»ØÁ÷µÄÈËÈº£¬¾¯·½·¢Éä´ßÀáµ¯ºÜÈÝÒ×µ¼ÖÂÈË²ÈÈË¡£</p>
-<p>´ËÍâ£¬¾¯·½ÔÚÏÖ³¡Òà×¥²¶ÊÐÃñ¡£</p>
-<figure id="attachment_11692839" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/1912010358302188.jpg"><img class="size-large wp-image-11692839" title="" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010358302188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019Äê12ÔÂ1ÈÕ£¬<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">Ïã¸Û</a>ÃñÖÚ¡°²»Íü³õÐÄÓÎÐÐ¼¯»á¡±¿¹ÕùÕßÕ¼ÊáÊ¿°ÍÀûµÀË«µÀÓÎÐÐ¡££¨ËÎ±ÌÁú£¯´ó¼ÍÔª£©</figcaption></figure>
-<figure id="attachment_11692840" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/1912010357592188.jpg"><img class="size-large wp-image-11692840" title="" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010357592188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019Äê12ÔÂ1ÈÕ£¬<a href="https://github.com/ijwoue2416/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md">Ïã¸Û</a>ÃñÖÚ¡°²»Íü³õÐÄÓÎÐÐ¼¯»á¡± ¼âÉ³¾×ÖÓÂ¥ÈËÉ½ÈËº£¡££¨ËÎ±ÌÁú£¯´ó¼ÍÔª£©</figcaption></figure>
-<figure id="attachment_11692841" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/12/1912010357532188.jpg"><img class="size-large wp-image-11692841" title="" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010357532188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019Äê12ÔÂ1ÈÕ£¬Ïã¸ÛÃñÖÚ¡°²»Íü³õÐÄÓÎÐÐ¼¯»á¡± ¼âÉ³¾×ÖÓÂ¥ÈËÉ½ÈËº£¡££¨ËÎ±ÌÁú£¯´ó¼ÍÔª£©</figcaption></figure>
-<p>ÔðÈÎ±à¼­£ºÏôÂÉÉú</p>
-
+	<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ01æ—¥è®¯ã€‘12æœˆ1æ—¥ä¸‹åˆï¼Œå¤§æ‰¹æ¸¯äººåœ¨ä¹é¾™åŒº<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E5%B0%96%E6%B2%99%E5%92%80.md#1">å°–æ²™å’€</a>ä¸¾è¡Œâ€œ<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E6%AF%8B%E5%BF%98%E5%88%9D%E5%BF%83.md#1">æ¯‹å¿˜åˆå¿ƒ</a>å¤§<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">æ¸¸è¡Œ</a>â€ï¼Œä¸å°‘å‚ä¸Žè€…èµ°å‡ºé©¬è·¯ï¼Œé­åˆ°è­¦æ–¹å–·å°„èƒ¡æ¤’å–·é›¾ã€‚éšåŽï¼Œè­¦æ–¹è¿˜è¿žå‘ä¸¤æžšå‚¬æ³ªå¼¹ã€‚</p>
+<p>ä¸‹åˆ3æ—¶åŠå·¦å³ï¼Œèšé›†åœ¨<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E5%B0%96%E6%B2%99%E5%92%80.md#1">å°–æ²™å’€</a>é’Ÿæ¥¼çš„å¤§æ‰¹å¸‚æ°‘å¼€å§‹<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">æ¸¸è¡Œ</a>ï¼Œä»Žé’Ÿæ¥¼å¯¹é¢ç©ºåœ°èµ·æ­¥ï¼Œæ²¿æ¢³å£«å·´åˆ©é“ï¼Œç»å°–æ²™å’€æµ·æ»¨èŠ±å›­æ¸¸è¡Œè‡³çº¢ç£¡ä½“è‚²é¦†ã€‚æ²¿é€”æœ‰é˜²æš´è­¦æˆ’å¤‡ã€‚ç”±äºŽæ¸¸è¡Œäººæ•°ä¼—å¤šï¼Œé˜Ÿä¼ååˆ†æŒ¤é€¼ï¼Œä¸å°‘æ°‘ä¼—èµ°å‡ºé©¬è·¯ï¼Œ<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E9%98%B2%E6%9A%B4%E8%AD%A6%E5%AF%9F.md#1">é˜²æš´è­¦å¯Ÿ</a>ä¸€åº¦å‘åŽæ’¤é€€ã€‚</p>
+<p>æ¸¸è¡Œé˜Ÿä¼è‡³å¼¥æ•¦é“ï¼Œåœ¨è¯¥åœ°åŠå²›é…’åº—å¤–ï¼Œ<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E9%98%B2%E6%9A%B4%E8%AD%A6%E5%AF%9F.md#1">é˜²æš´è­¦å¯Ÿ</a>ä¸æ—¶ä¸¾è“æ——ï¼Œè¿˜å‘å°„èƒ¡æ¤’å–·é›¾ï¼Œå–·å‘ç¦»å¼€é©¬è·¯çš„æ¸¸è¡Œå¸‚æ°‘ï¼Œè¦æ±‚æ¸¸è¡Œå¸‚æ°‘è¿”å›žè¡Œäººè·¯ã€‚è¶Šæ¥è¶Šå¤šçš„å¸‚æ°‘åœ¨è·¯å£ä½ç½®åœç•™ä¸Žè­¦æ–¹å¯¹å³™ã€‚</p>
+<p>çº¦æ¸¸è¡Œ40åˆ†é’Ÿï¼Œå°–ä¸œæ¶ˆé˜²å±€å¯¹é¢é©¬è·¯ä¸Šï¼Œå·²ç»æœ‰å¤§æ‰¹å¸‚æ°‘èšé›†ï¼Œé˜²æš´è­¦çªç„¶ä¸¾æ——ï¼Œåˆæ— æ•…å‘å°„ä¸¤æžšå‚¬æ³ªå¼¹é©±æ•£æ°‘ä¼—ï¼Œæ°‘ä¼—çº·çº·é¿å¼€ã€‚è€Œæ­¤å¤„ä½ç½®éžå¸¸ç‹­çª„ï¼ŒåˆåŠ ä¸Šä»Žçº¢é¦†ç»ˆç‚¹å›žæµçš„äººç¾¤ï¼Œè­¦æ–¹å‘å°„å‚¬æ³ªå¼¹å¾ˆå®¹æ˜“å¯¼è‡´äººè¸©äººã€‚</p>
+<p>æ­¤å¤–ï¼Œè­¦æ–¹åœ¨çŽ°åœºè‡³å°‘æŠ“æ•ä¸¤åå¹´è½»äººã€‚</p>
+<p style="text-align: center;"><a src=""></a><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/djtsp.jpg" title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/zumrun270/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a src="https://www.youtube.com/embed/UU-WZnY3Yqg" width="640" b="360" frameborder="0"></a></p>
+<figure id="attachment_11692837" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912010358172188.jpg"><img class="size-large wp-image-11692837" src="https://i.epochtimes.com/assets/uploads/2019/12/1912010358172188-600x399.jpg" alt="2019å¹´12æœˆ1æ—¥ï¼Œæ¸¯äººåœ¨å°–æ²™å’€ä¸¾è¡Œæ¸¸è¡Œï¼Œé˜²æš´è­¦å¯Ÿä¸¾èµ·è“æ——ï¼Œå¹¶å–·å°„èƒ¡æ¤’å–·é›¾ã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰" width="600" b="399" /></a><figcaption class="wp-caption-text">2019å¹´12æœˆ1æ—¥ï¼Œæ¸¯äººåœ¨å°–æ²™å’€ä¸¾è¡Œæ¸¸è¡Œï¼Œé˜²æš´è­¦å¯Ÿä¸¾èµ·è“æ——ï¼Œå¹¶å–·å°„èƒ¡æ¤’å–·é›¾ã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰</figcaption></figure>
+<figure id="attachment_11692839" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912010358302188.jpg"><img class="size-large wp-image-11692839" title="" src="https://i.epochtimes.com/assets/uploads/2019/12/1912010358302188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019å¹´12æœˆ1æ—¥ï¼Œ<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">é¦™æ¸¯</a>æ°‘ä¼—â€œä¸å¿˜åˆå¿ƒæ¸¸è¡Œé›†ä¼šâ€æŠ—äº‰è€…å æ¢³å£«å·´åˆ©é“åŒé“æ¸¸è¡Œã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰</figcaption></figure>
+<figure id="attachment_11692840" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912010357592188.jpg"><img class="size-large wp-image-11692840" title="" src="https://i.epochtimes.com/assets/uploads/2019/12/1912010357592188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019å¹´12æœˆ1æ—¥ï¼Œ<ahref="https://github.com/zumrun270/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF.md#1">é¦™æ¸¯</a>æ°‘ä¼—â€œä¸å¿˜åˆå¿ƒæ¸¸è¡Œé›†ä¼šâ€ å°–æ²™å’€é’Ÿæ¥¼äººå±±äººæµ·ã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰</figcaption></figure>
+<figure id="attachment_11692841" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912010357532188.jpg"><img class="size-large wp-image-11692841" title="" src="https://i.epochtimes.com/assets/uploads/2019/12/1912010357532188-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">2019å¹´12æœˆ1æ—¥ï¼Œé¦™æ¸¯æ°‘ä¼—â€œä¸å¿˜åˆå¿ƒæ¸¸è¡Œé›†ä¼šâ€ å°–æ²™å’€é’Ÿæ¥¼äººå±±äººæµ·ã€‚ï¼ˆå®‹ç¢§é¾™ï¼å¤§çºªå…ƒï¼‰</figcaption></figure>
+<p>è´£ä»»ç¼–è¾‘ï¼šè§å¾‹ç”Ÿ</p>
+	
+<hr>
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/1/n11692823.htm">¸ÛÈË¼âÉ³¾×ÓÎÐÐ ¾¯Åçºú½·ÅçÎíÉä´ßÀáµ¯</a>
-
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691564.htm">×éÍ¼£º11.30¿ç´ú¼¯»á ÒªÇó¸Û¸®»ØÓ¦ËßÇó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691370.htm">Ïã¸Û¿¹±©½ü°ëÄê 5890ÈËÔâ¾Ð²¶ ×îÐ¡½ö11Ëê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691213.htm">¡¾Ö±²¥»Ø·Å¡¿11.30Ïã¸ÛÖÐÑ§ÉúÒø·¢×åÖÐ»·¼¯»á</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11688080.htm">Ïã¸Û£¬Äã»áºÃÆðÀ´Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11686481.htm">Ïã¸Û»¯Ñ§ÀÏÊ¦Óõ¸Û¾¯Í£ÓÃ´óÂ½ÖÆ´ßÀáµ¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11685814.htm">Ïã¸ÛÂèÂèÓõÍ£Ö¹ÉçÇøÉä´ßÀáµ¯</a></li>
-> <li><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/12/1/n11692547.md">¸ÛÈË¼¯»á¸ßº°¡°ÌìÃðÖÐ¹²¡± ¸ÄÐ´ÔÀ·É´ÊÃ÷Ö¾</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691946.htm">¹ã¶«ÉÏÍò´åÃñÕòÕþ¸®Ç°ÇëÔ¸ Óë¾¯³ÖÐø¶ÔÖÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691704.htm">ÖÐ¹²×¥²¶²®Àû×ÈºÍÌ¨ÍåÈË ÀíÓÉÊÇ¸ÉÉæÏã¸ÛÊÂÎñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688307.htm">ÖÐ¹²¹ØÓÚ·´ËÍÖÐÔË¶¯µÄÎå´óÏ´ÄÔ»ÑÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691076.htm">¡¾ÄÚÄ»¡¿ÖÐ¹²¼äµýÎªºÎ»á¶¢ÉÏ±ÈÀûÊ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671738.htm">½¯½éÊ¯Ï²»¶¶ÁÊ²Ã´Êé£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671242.htm">9 ËêÄÐº¢ÉÏ¿ÎÍ¿Ñ»±»Âî·­ ÏÖÊÜÆ¸ÔÚ²ÍÌü»­Ò»ÃæÇ½</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671483.htm">¡°ËÄ´ó½Ô¿Õ¡±ÊÇÄÄËÄ´ó¿Õ£¿ ½ÌÈËÎòÊ²Ã´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/24/n11677626.htm">¡¾ÀúÊ·»Øíø¡¿ÂÒÊÀÐÐ´ºÇïÊÂ Ãð¹²ËàµýµÄ´÷óÒ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690272.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©×îµ£ÐÄµÄÀ´ÁË Î÷·½ËæÃÀÖÆ²Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11687729.htm">¸ßÒÔÏèÂ¼ÖÆÂ½×ÛéæÃü ³öÊÂÇ°»ÆÇïÉúÔøÅ­Åú½ÚÄ¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690519.htm">ÖÐ¹ú¾­¼ÃÕæÏà ·ÖÎö£ºÊµ¼ÊGDPËõË®Ò»°ë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690272.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©×îµ£ÐÄµÄÀ´ÁË Î÷·½ËæÃÀÖÆ²Ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690322.htm">¡¾ºúÄËÎÄ¿ª½²¡¿ÌÉ×Å¿´ÊÖ»ú µ±ÐÄ¼¹×µ²àÍä£¡3ÕÐ½ÃÕý¼¹×µ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/30/n11691127.htm">¡¾ÅÄ°¸¾ªÆæ¡¿11ÔÂÎ§³Ç·¢ÉúÊ²Ã´£¿Êý¾Ý¾ªÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11687729.htm">¸ßÒÔÏèÂ¼ÖÆÂ½×ÛéæÃü ³öÊÂÇ°»ÆÇïÉúÔøÅ­Åú½ÚÄ¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690714.htm">¸ßÒÔÏèâ§ÊÅ Ô¬Á¢³âÔð½ÚÄ¿·½£º»¹Ç·ÎÒÒ»¸öµÀÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688012.htm">¸ßÒÔÏèÂ¼Â½×ÛÖèÊÅ ´«¡¶×·ÎÒ°É¡·´ÇÍËËùÓÐÈËÔ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690472.htm">Ïã¸Û·¨°¸ÉúÐ§¹ÄÎè¸ÛÈË ºÎÔÏÊ«£ºÏÂÒ»Õ¾Ó¢¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690316.htm">µ¿ÄîÒÑ¹ÊºÃÓÑ¸ßÒÔÏè ÁÖÊéºÀ´©ÌØÖÆÕ½Ñ¥²ÎÈü</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/19/11/28/n11685814.md#1">é¦™æ¸¯å¦ˆå¦ˆååœæ­¢ç¤¾åŒºå°„å‚¬æ³ªå¼¹</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/19/11/28/n11686481.md#1">é¦™æ¸¯åŒ–å­¦è€å¸ˆåæ¸¯è­¦åœç”¨å¤§é™†åˆ¶å‚¬æ³ªå¼¹</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/19/11/29/n11688080.md#1">é¦™æ¸¯ï¼Œä½ ä¼šå¥½èµ·æ¥å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/19/11/30/n11691213.md#1">ã€ç›´æ’­å›žæ”¾ã€‘11.30é¦™æ¸¯ä¸­å­¦ç”Ÿé“¶å‘æ—ä¸­çŽ¯é›†ä¼š</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/19/12/1/n11692823.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šä¸‰åŒºå›ä¹±å’Œä¾µåŽæ—¥å†›æ”»åŠ¿åè°ƒè¿›è¡Œ</a></li><li><a href="https://github.com/zumrun270/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">å¯»èŽ·ç”Ÿå‘½çœŸè°› æ³•å›½åŒ»é™¢é™¢é•¿åˆ†äº«ä¿®ç‚¼æ„Ÿæ‚Ÿ</a></li><hr>
+
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12110809.md#1">ã€åå­—è·¯å£ã€‘ç¾Žä¸­è¦å…¨é¢è„±é’© ä¸­å›½äº”å¤§ç»æµŽè­¦è®¯</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12112087.md#1">è‡´æ•¬æŽæ´ªå¿—å…ˆç”Ÿ ç¾Žè®®å‘˜æŽˆäºˆ513å›½ä¼šå±±å›½æ——</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12113099.md#1">å·æ™®ç§°å¯åˆ‡æ–­â€œç¾Žä¸­å…³ç³»â€ èµµç«‹åšè½¯åŒ–å›žåº”</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12112161.md#1">å››å·å…¬æ°‘è½¬ä¼ ä¸€å¼ å›¾ç‰‡ å¼•æ¥å›½ä¿äºŒæ¬¡ä¸Šé—¨</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/2/22/n11886913.md#1">ã€æ€æƒ³é¢†è¢–ã€‘ä¸­å…±ä¸ºä½•å¿µå¿µä¸å¿˜å¾æœå°æ¹¾ï¼Ÿ</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12110814.md#1">IUåŠä¸ªæœˆä¸‰åº¦ææ¬¾åŠ©äºº ç”Ÿæ—¥å‰å¤•çŸ­å‘å—å…³æ³¨</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115144.md#1">å¯¹å°æ¹¾èµžä¸ç»å£ é»„ç§‹ç”Ÿï¼šæˆ‘çš„å…„å¼Ÿä¹Ÿè¦ç§»æ°‘äº†</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12114166.md#1">å´”æ™ºå‹æœ¬æ—¥è¿Žæ¥å¥³å„¿å‡ºç”Ÿ æ¯å¥³å‡å®‰</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12113316.md#1">åŠç™¾å¹´çºªåå¤©ç»ƒå‡ºè…¹è‚Œ æŽè‹¥å½¤åˆ†äº«å†»é¾„æœ¯</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12114576.md#1">ä¸»æŒé‡é™©æƒŠé­‚ å¼ å‡¤ä¹¦é•¿è¾¾10å¹´æ²¡æŽ¥å¤–æ™¯</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/13/7/18/n3919814.md#1">ç±³å¼€æœ—åŸºç½—ï¼ˆ8ï¼‰ã€Šåˆ›ä¸–çºªã€‹ï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12110895.md#1">å¥³å­æ¿’æ­»è§ä¸Šå¸å’Œè€¶ç¨£ æ³æ±‚è¿˜é˜³ç»ˆèŽ·é‡ç”Ÿ</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/4/25/n12061244.md#1">è´¾å®çŽ‰å’Œè–›å®é’—çš„é‡‘çŽ‰ä¹‹ç¼˜</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/4/13/n12026603.md#1">ã€å‘½ç†ã€‘çš‡å¸å‘½æ˜¯æ€Žæ ·æ¥çš„ï¼Ÿ</a></li>
+<li><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/12/n12103093.md#1">æ²‰æººäºŽé…’ä¹¡å¿˜å´å¤©å‘½ é©¬å‘¨å—ç‚¹åŒ–ç»ˆæˆè‚¡è‚±ä¹‹è‡£</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/zumrun270/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/zumrun270/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/1/n11692823.htm">æ¸¯äººå°–æ²™å’€æ¸¸è¡Œ è­¦å–·èƒ¡æ¤’å–·é›¾å°„å‚¬æ³ªå¼¹</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zumrun270/djy/blob/master/gb/19/12/1/n11692823.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/zumrun270/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/zumrun270/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/zumrun270/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/zumrun270/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zumrun270/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
